# FishyBot

./: .gitignore  README.md  Spacefile  pyproject.toml
fishybot/: bot.py  database.py  help.py  main.py  requirements.txt  test_commands.py  test_cron.py
fishybot/blueprints/: cursed.py  full_search.py  notes.py  search.py  xml_search.py
fishybot/blueprints/modio/: __init__.py  blueprint.py  models.py  modio_database.py  operations.py
fishybot/cogs/: search.py
fishybot/common/: config.py
fishybot/database/: operations.py  xml_operations.py
fishybot/utils/: xpath.py
micro/: pyproject.toml  requirements.txt  run.py  run_local.py  setup.py  update_commands.py
micro/fishybot/: help.py  main.py
micro/fishybot/blueprints/: admin.py  full_search.py  notes.py  repeater.py  search.py  xml_search.py
micro/fishybot/blueprints/modio/: __init__.py  blueprint.py  discord_follow.py  models.py  modio_database.py  operations.py
micro/fishybot/common/: config.py  exceptions.py
micro/fishybot/database/: operations.py  sqlite_model.py  xml_operations.py
setup_db/: gather_games.py  model.py  sqlite_adapter.py  testing_read.py  xmlparser.py
setup_db/sqlite/: gather_games.py  model.py  sqlite_adapter.py  testing_read.py  xmlparser.py
tests/: conftest.py
tests/test_commands/: test_generic.py  test_hook.py  test_search.py
tests/test_modio/: test_commands.py  test_cron.py
tests/test_modio/data/: discord_followers.json  game_34.json  game_34_all_mods_events.json  game_34_mod_144.json  game_34_mod_144_comments.json  game_34_mod_144_events.json  modio_games.json  (+2 more)
