[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FishyBot"
version = "0.0.1"
authors = [
  { name="etrotta", email="etrotta@duck.com" },
]
dependencies = ['requests', 'PyNaCl', 'requests-toolbelt', 'deta', 'deta-discord-interactions']
description = "A discord bot."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Unofficial-Aground-Modding-Team/FishyBot"